anotehr attempt and regular update

--- a/config/localization/enus.json
+++ b/config/localization/enus.json
@@ -130,6 +130,7 @@
 			"labelCategory": "Category",
 			"labelInstitution": "Institution",
 			"labelProfessionalCourse": "Professional course",
+			"labelMasterDegree": "Masters degree",
 			"labelBachelorDegree": "Bachelor degree",
 			"labelExtensionCourse": "Extension course"
 		}
